# markdown-frontmatter

./: .pre-commit.sh  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
