[package]
description = "A type-safe markdown frontmatter parser"
edition = "2024"
license = "MIT"
name = "markdown-frontmatter"
repository = "https://github.com/imbolc/markdown-frontmatter"
version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
json = ["dep:serde", "dep:serde_json"]
toml = ["dep:serde", "dep:toml"]
yaml = ["dep:serde", "dep:serde_yaml"]
full = ["json", "toml", "yaml"]
default = ["full"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
thiserror = "2"
toml = { version = "0.9", optional = true }

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "deny", priority = -2 }
keyword_idents = { level = "deny", priority = -2 }
let_underscore = { level = "deny", priority = -2 }
missing_docs = "deny"
nonstandard_style = { level = "deny", priority = -2 }
refining_impl_trait = { level = "deny", priority = -2 }
rust_2018_compatibility = { level = "deny", priority = -2 }
rust_2018_idioms = { level = "deny", priority = -2 }
rust_2021_compatibility = { level = "deny", priority = -2 }
rust_2024_compatibility = { level = "deny", priority = -2 }
unreachable_pub = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
